feat(ranges): allow to get ranges on content download
